# awareness

./: .gitignore  README.md  __init__.py  awareness_cli.py  generate_charts.py  project_rank_cli.py  pyproject.toml  requirements-dev.txt  search_tracker.py  setup.py
.github/workflows/: tests.yml
awareness/: __init__.py  awareness_cli.py
awareness/core/: project_rank_tracker.py
awareness/utils/: search_terms.py
tests/: __init__.py  test_awareness_cli.py  test_generate_charts.py  test_project_rank_tracker.py
tests/charts/: test_generate_charts.py
tests/core/: test_project_rank_tracker.py  test_search_tracker.py
tests/utils/: test_search_terms.py
